# webp-nodejs

./: .envrc  .gitignore  Cargo.toml  LICENSE.md  build.sh  demo.mjs  dist.sh  index.d.ts  index.js  package.json  readme.md
.github/workflows/: CI.yml
__test__/: index.spec.mjs
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
